Added filter function

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <header>
-        <!-- <h1 class="title">
-            Notes
-        </h1> -->
+        <div class="notes-header">
+            <input type="text" class="filter-notes" placeholder="Filter notes...">
+        </div>
     </header>
     <main>
         <div class="notes-list"></div>
